[gd_scene load_steps=4 format=3 uid="uid://cf510hosm884a"]

[ext_resource type="Script" path="res://scenes/menu/options/options.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://tkp806fv8xbc" path="res://assets/audio/menu_button_press.wav" id="2_p2eky"]
[ext_resource type="Script" path="res://scenes/menu/options/audio_volume_slider.gd" id="4"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="ButtonPressSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_p2eky")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -105.0
offset_right = 225.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="OptionsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudioLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "audio"

[node name="fullscreen_check" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "fullscreen"

[node name="borderless_check2" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "borderless"

[node name="vsync_check3" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "vsync"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VideoLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "video"

[node name="video_sliders" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="labels" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders"]
layout_mode = 2

[node name="master_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders/labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
text = "master"

[node name="music_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders/labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
text = "music"

[node name="sfx_label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders/labels"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
text = "sfx"

[node name="sliders" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="master_slider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders/sliders"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.05
script = ExtResource("4")

[node name="music_slider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders/sliders"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.05
script = ExtResource("4")
audio_bus_name = "Music"

[node name="sfx_slider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders/sliders"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.05
script = ExtResource("4")
audio_bus_name = "SoundFX"

[node name="BackButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "back"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/fullscreen_check" to="ButtonPressSound" method="play"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/fullscreen_check" to="." method="_on_fullscreen_check_toggled"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/borderless_check2" to="ButtonPressSound" method="play"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/borderless_check2" to="." method="_on_borderless_check2_toggled"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/vsync_check3" to="ButtonPressSound" method="play"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/vsync_check3" to="." method="_on_vsync_check3_toggled"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders/sliders/master_slider" to="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders/sliders/master_slider" method="_on_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders/sliders/music_slider" to="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders/sliders/music_slider" method="_on_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders/sliders/sfx_slider" to="Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/video_sliders/sliders/sfx_slider" method="_on_value_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/BackButton" to="." method="_on_Button_pressed"]
